🐛 fixed https://github.com/mrsterner/Kontraption/issues/27

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,11 @@ org.gradle.daemon=false
 
 archives_base_name=kontraption-1201
 
+# The mod version. See https://semver.org/
+mod_version=0.0.2
+# First number is the major update, like the release stuff
+# Second number is whenever stuff gets added, any stuff
+# Third number is bug fixes
 
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1]
@@ -14,8 +19,7 @@ mapping_version=1.20.1
 mod_id=kontraption
 mod_name=Kontraption
 mod_license=Apache-2.0
-# The mod version. See https://semver.org/
-mod_version=0.0.2
+
 mod_group_id=net.illuc
 mod_authors=illuc
 mod_description=Mekanism airship mod with a sprinkle of inspiration from Space Engineers
