--- a/.github/workflows/upload-to-discord.yml
+++ b/.github/workflows/upload-to-discord.yml
@@ -34,6 +34,7 @@ jobs:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
           embed-title: "Kontraption Nightly"
           embed-description: |
+            commits:
             ${{ env.WEEKLY_COMMITS }}
           embed-color: 0xFF6600
     - name: Upload Build
