--- a/build.gradle
+++ b/build.gradle
@@ -197,6 +197,10 @@ dependencies {
     implementation 'thedarkcolour:kotlinforforge:4.10.0'
 
 
+    compileOnly fg.deobf("curse.maven:female-gender-forge-481655:4603538")
+
+
+
     //RUNTIME
     runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
     //runtimeOnly fg.deobf("curse.maven:rubidium-574856:4494903")
