--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ buildscript {
     repositories {
         // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         mavenCentral()
     }
     dependencies {
@@ -9,6 +12,8 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath 'org.parchmentmc:librarian:1.+'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.10'
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:12.1.1"
+
         // OPTIONAL Gradle plugin for Kotlin Serialization
         //classpath 'org.jetbrains.kotlin:kotlin-serialization:1.6.10'
 
@@ -26,6 +31,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
 }
 
+apply plugin: "org.jlleitschuh.gradle.ktlint"
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
