--- a/.github/workflows/upload-to-discord.yml
+++ b/.github/workflows/upload-to-discord.yml
@@ -48,4 +48,22 @@ jobs:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       with:
         args: ./build/libs/kontraption-*
+    - name: Send Embedded Discord Message to VS
+      uses: tsickert/discord-webhook@v6.0.0
+      with:
+        webhook-url: ${{ secrets.VS_DISCORD_WEBHOOK }}
+        embed-title: "Kontraption Nightly from ${{ github.ref_name }}"
+        embed-description: |
+          Nightlies are posted every friday at 00:00 UTC
+          The nightly builds WILL have bugs and MIGHT be broken and not launch at all or corrupt your world! Use these builds with caution!
+          
+          New commits:
+          ${{ env.WEEKLY_COMMITS }}
+        embed-color: 0xFF6600
+    - name: Upload Build to VS
+      uses: sinshutu/upload-to-discord@v2.0.0
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.VS_DISCORD_WEBHOOK }}
+      with:
+        args: ./build/libs/kontraption-*
             
