--- a/.github/workflows/upload-to-discord.yml
+++ b/.github/workflows/upload-to-discord.yml
@@ -79,8 +79,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: "Nightly ${{ env.SHORT_COMMIT_HASH }}"
-        release_name: "${{ env.SHORT_COMMIT_HASH }}"
+        tag_name: "Nightly ${{ env.SHORT_COMMIT_HASH }} - ${{ github.ref_name }}"
+        release_name: "${{ env.SHORT_COMMIT_HASH }} - ${{ github.ref_name }}"
         draft: true
         prerelease: false
 
@@ -90,6 +90,8 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./build/libs/kontraption-*
+        asset_name: "kontraption-${{ env.SHORT_COMMIT_HASH }}.jar"
+        asset_content_type: application/java-archive
 
     - uses: eregon/publish-release@v1.0.6
       env:
