--- a/.github/workflows/upload-to-discord.yml
+++ b/.github/workflows/upload-to-discord.yml
@@ -78,4 +78,4 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ github.token }}
       with:
-          asset_paths: '["./build/libs/kontraption-*"]'
+          asset_paths: '["./build/libs/*"]'
