--- a/.github/workflows/upload-to-discord.yml
+++ b/.github/workflows/upload-to-discord.yml
@@ -88,7 +88,7 @@ jobs:
       id: glob
       with:
         files: |
-            ./build/libs/kontraption-*
+            /build/libs/*
 
     - uses: actions/upload-release-asset@v1.0.1
       env:
