--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,9 @@ pluginManagement {
         maven { url "https://maven.fabricmc.net/" }
         maven { url "https://maven.architectury.dev/" }
         maven { url "https://maven.minecraftforge.net/" }
+        repositories {
+            maven { url = 'https://maven.parchmentmc.org' } // Add this line
+        }
         gradlePluginPortal()
 
     }
