--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="kotlinforforge" #mandatory
-loaderVersion="[3,)"
+loaderVersion="[4,)"
 license="${mod_license}"
 issueTrackerURL="https://github.com/illucc/Kontraption/issues"
 
@@ -36,5 +36,11 @@ description='''${mod_description}'''
    versionRange="[3,)"
    ordering="BEFORE"
    side="BOTH"
+[[dependencies.kontraption]]
+modId="computercraft"
+mandatory=false
+versionRange="[1,)"
+ordering="BEFORE"
+side="BOTH"
 
 
