--- a/build.gradle
+++ b/build.gradle
@@ -191,8 +191,8 @@ dependencies {
 
 
     //ZEROCORE
-    compileOnly group: "it.zerono.mods.zerocore", name: "ZeroCore2", version: "1.20.1-2.1.40"
-
+    compileOnly group: "it.zerono.mods.zerocore", name: "ZeroCore2", version: "1.20.1-2.1.47"
+    implementation 'it.zerono.mods.zerocore:ZeroCore2:1.20.1-2.1.47'
 
     implementation         ("org.valkyrienskies.core:api:${vs_core_version}")
     implementation         ("org.valkyrienskies.core:impl:${vs_core_version}")
@@ -208,8 +208,9 @@ dependencies {
 
     implementation "org.joml:joml:1.10.5"
     implementation "com.fasterxml.jackson.core:jackson-annotations:2.13.3"
-    implementation 'thedarkcolour:kotlinforforge:4.10.0'
+    implementation 'thedarkcolour:kotlinforforge:4.11.0'
     compileOnly fg.deobf("curse.maven:cc-tweaked-282001:5379173")
+    implementation fg.deobf("curse.maven:cc-tweaked-282001:5379173")
 
 
     compileOnly fg.deobf("curse.maven:female-gender-forge-481655:4603538")
